--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,6 @@ deploy:
   provider: script
   # Note: change "docs" to the directory where your gatsby-site lives, if necessary
   script: yarn install && yarn run deploy
-  skip_cleanup: true
+  cleanup: false
   on:
     branch: master
