--- a/.travis.yml
+++ b/.travis.yml
@@ -3,14 +3,9 @@ before_script:
   - npm install -g gatsby-cli
 node_js:
   - "10"
-script:
-  - gatsby build --prefix-paths
 deploy:
-  provider: pages
-  # Note: change "docs" to the directory where your gatsby-site lives, if necessary
+  provider: script
   script: yarn install && yarn run deploy
   cleanup: false
-  github_token: $GH_TOKEN
-  local_dir: build
   on:
     branch: master
