--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,8 @@ script:
 deploy:
   provider: pages
   skip_cleanup: true
-  github_token: $GH_TOKEN
+  github_token: $GITHUB_TOKEN
+  keep_history: true
   local_dir: public
   on:
     branch: master
