--- a/.travis.yml
+++ b/.travis.yml
@@ -2,17 +2,10 @@ language: node_js
 before_script:
   - npm install -g gatsby-cli
 node_js:
-  - "stable"
-cache:
-  directories:
-  - node_modules
-script:
-  - npm run build
+  - stable
 deploy:
-  provider: pages
+  provider: script
+  script: yarn install && yarn run deploy
   skip_cleanup: true
-  github_token: $GITHUB_TOKEN
-  keep_history: true
-  local_dir: public
   on:
     branch: master
