--- a/package.json
+++ b/package.json
@@ -37,13 +37,13 @@
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 0",
-    "deploy": "gatsby build --prefix-paths && gh-pages -d public -r https://$GITHUB_TOKEN@github.com/lhdi/LHDi.git"
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public -r https://$GITHUB_TOKEN@github.com/lhdi/LHDi.github.io.git"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/lhdi/LHDi"
+    "url": "https://github.com/lhdi/LHDi.github.io"
   },
   "bugs": {
-    "url": "https://github.com/lhdi/LHDi/issues"
+    "url": "https://github.com/lhdi/LHDi.github.io/issues"
   }
 }
